--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -7,6 +7,9 @@
         <th class="col-2">投稿者</th>
         <th class="col-4">コメント</th>
         <th class="col-2">画像</th>
+        <th class="col-2">詳細</th>
+        <th class="col-2">編集</th>
+        <th class="col-2">削除</th>
       </tr>
     </thead>
 
