--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,6 +13,7 @@
 
 <% if @user.id == current_user.id %>
   <%= link_to "プロフィール編集", edit_user_path(@user) %>
+  <%= link_to "お気に入り一覧", favorites_path(current_user.id) %>
 <% end %>
 
 <br>
